<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <EditText android:id="@+id/ing_ciudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ing_ciudad" />

    <EditText android:id="@+id/ing_personas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ing_personas" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_buscar"
        android:onClick="buscar"
        android:clickable="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_cuenta"
        android:onClick="cuenta"/>

</LinearLayout>